fixed overflow x on mobile devices

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
     scroll-behavior: smooth;
 }
 
+body, html {
+    overflow-x: hidden;
+  }
+
 :root{
     --bg-color:#e3edf7;
     --gradient-white-bg:linear-gradient(0deg,#fff 0%,#edf4fa 51%,#e5eef7 100%);
